# DeclarativeML

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DISTRIBUTED.md  DSL.md  EXTENSIONS.md  LICENSE  README.md  declarative_agents.md  declarative_distributed.md  declarative_dsl.md  declarative_extensions.md  declarative_readme.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dsl/: __init__.py  cli.py  parser.py
scripts/: check_docs.py
tests/: test_cli.py  test_docs.py  test_import_behavior.py  test_packaging.py  test_parser.py
visualizations/: database_that_learns.html
