[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsl"
version = "0.1.0"
description = "DeclarativeML DSL compiler"
authors = [{name = "DeclarativeML", email = "noreply@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "lark",
    "psycopg[binary]"
]

[project.urls]
Homepage = "https://example.com"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
